public/css/app.css
/** overall layout **/
html, body, .container-fluid, .row-fluid, .span10, #matches_list, .inner{
	height: 100%;
}
.navbar{
  margin-bottom: 5px;
}
.view{
	height: 90%;
	overflow: hidden;
}
#lga_list{
  height: 45%;
}
#lga_list .table-wrapper{
  height: 83%;
}
#nmis_list{
  height: 55%;
}
#nmis_list .table-wrapper{
  height: 75%;
}
.inner{
  padding: 25px;
  box-sizing: border-box;
}
.table-wrapper{
  margin: 0;
  padding: 0;
  width: 100%;
  overflow-y: auto;
}
[id^="matched_list_"]{
  position: relative;
  height: 100%;
}
.pairs-wrapper{
  height: 75%;
  padding-right: 10px;
  overflow-y: auto;
}
.putback-guidance{
  position: absolute;
  bottom: 0;
}


/* navbar quick fixes but needs to be done better */
.navbar .brand{
  padding-top: 15px;
  color: black;
  font-weight: 800;
}
.navbar .nav{
  padding-top: 5px;
  margin-left: 40px;
}
.navbar .nav > .active > a, .navbar .nav > .active > a:hover{
  background: none;
  -webkit-box-shadow: none;
  -moz-box-shadow: none;
  box-shadow: none;
}
.nav .active{
  font-weight: bold;
  text-decoration: underline;
}

.brand img{
  width: 24px;
  margin: -8px 8px 0 0;
}
.navbar-inner{
  background: rgb(240,240,240);
  border: none;
  -webkit-box-shadow: none;
  -mox-box-shadow: none;
  box-shadow: none;
}
.navbar-inner .lga{
  float: left;
  padding-top: 15px;
  margin-left: 10px;
}
.navbar .btn.printouts{
  color: rgb(8, 88, 129);
  float: right;
  margin-top: 10px;
}


/**** visual styles ****/
body {
  font-size: 13px;
  background: rgb(240,240,240);
	padding-left: 5px; padding-right: 5px;
}
.main{
  background-color: rgb(63,98,116);
}
.icon-putback{
  background-image: url("../images/icon-putback.png");
  background-position: 0 0;
}
h3{
  margin-top: -10px;
  font-weight: normal;
}
h4{
  margin-top: -3px;
}
h3 .unmatched{
  font-weight: normal;
  color: rgb(178,196,204);
}
h4 .matched-length{
  color: rgb(100,100,100);
}
.guidance{
  font-size: 17px;
  color: rgb(144, 213, 248);
}

/**** table style ****/
table{
  font-size: 13px;
  empty-cells: show;
  table-layout: fixed;
  background-color: #fafafa;
}
.table{
  margin-bottom: 0;
}
.table th, .table td{
  padding: 2px;
  word-wrap: break-word;
  border: 1px solid #ddd;
}
th:first-child{
  width: 55px;
}
th:nth-child(2), td:nth-child(2){
  text-align: center;
  width: 6%;
}
th:nth-child(3){
  width: 15%;
}
th:nth-child(4){
  width: 29%;
}
th:nth-child(5){
  width: 16%;
}
tbody tr:hover{
  background-color: #dddddd;
}
tbody tr.active td, tbody tr.active:hover td{
  background-color: rgb(132, 201, 235);
  font-weight: bold;
}
tbody tr.active td:first-child{
  background-image: url("../images/icon-star.png");
  background-repeat: no-repeat;
  background-position: 21px 3px;
}
tbody tr.matched{
  opacity: 0.5;
  display: none;
}


.search{
  font-weight: normal;
  float: right;
}
#nmis_list .search{
  /*margin-top: -42px;*/
}
input[type="search"]{
  margin-left: 10px;
}
.btn-match, .guidance .btn-match:hover, .guidance .btn-match:focus{
  background: rgb(132, 201, 235);
  font-weight: bold;
  font-size: 13px;
  padding: 0 7px 2px 7px;
}
.star{
  display: inline-block;
  width: 60px;
  height: 25px;
  background: rgb(132, 201, 235) url("../images/icon-star.png") no-repeat 21px 3px;
  margin: 0 0 -10px 0;
}
#lga_list{
  padding-bottom: 0;
}
#nmis_list{
  padding-top: 0;
}
#lga_list .inner{
  border-bottom: 4px solid rgb(43, 68, 80);
}
#nmis_list h3, #lga_list h3, .search{
  color: #ffffff;
}
.pairs{
  border-bottom: 1px solid #aaa;
}
.pairs dt, dd{
  font-weight: bold;
}
.pairs dt{
  display: inline;
}
.pairs dd{
  display: inline;
}
.btn-putback{
  float: right;
}
.putback-guidance .btn-putback{
  float: none;
}

